--- a/notebooks/rtr_data_assignment.ipynb
+++ b/notebooks/rtr_data_assignment.ipynb
@@ -65,7 +65,6 @@
    "outputs": [],
    "source": [
     "# imports and jupyter nb settings\n",
-    "# best params k=70, alpha = .002, beta=.001, beta=.05\n",
     "import matplotlib.pylab as plt\n",
     "import pandas as pd\n",
     "from pandas.api.types import CategoricalDtype\n",
@@ -1373,6 +1372,8 @@
    "source": [
     "# Best (80, 0.0075, 0.001, 0.08)\n",
     "# (60, 0.00010597789568804063, 0.0008, 0.05)\n",
+    "# best params k=70, alpha = .002, beta=.001, beta=.05\n",
+    "# MF(full_train, full_test, 80, 0.004, 0.001, 0.1, 30)\n",
     "run_gridsearch(grid_train, grid_test)"
    ]
   },
